<resources>
    <string name="app_name">FabFunctions</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_email_hint">abc@gmail.com</string>
    <string name="sign_in_password_hint">Your password</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_up">Sign up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="remember_me">Remember Me</string>
    <string name="sign_in_fullname_hint">Stephen Sales</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="following">Following</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>